[tool.poetry]
name = "website_flask"
version = "0.1.0"
description = ""
authors = ["Kiro47 <kiro47@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
